# MULTITHREADED-FILE-COMPRESSION-TOOL

./: CMakeLists.txt
include/: Compressor.hpp
src/: Compressor.cpp  README.md  main.cpp
